<resources>
    <string name="app_name">PopularMovies</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_sort_key">sort_by</string>
    <string name="pref_sort_pop">Popularity</string>
    <string name="pref_sort_highest_rated">Descending</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="pref_now_playing_key">display_nowplaying</string>
    <string name="pref_now_playing_false">Now Playing Disabled</string>
    <string name="pref_enable_now_playing">Now Playing Enabled</string>
    <string name="pref_default_nowplaying">enable_nowplaying</string>
    <string name="pref_fav_key">Show_Favorites</string>
    <string name="pref_no_favs">Not Displaying Favorites</string>
    <string name="pref_yes_favs">Displaying Favorites</string>
    <string name="pref_default_yes_favs">show_favs</string>
</resources>
