<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <ListPreference
        android:title="Sort By"
        android:defaultValue="@string/pref_sort_pop"
        android:key="@string/pref_sort_key"
        android:entries="@array/temp_item_pref"
        android:entryValues="@array/temp_item_values">
    </ListPreference>

    <CheckBoxPreference
        android:title="Now Playing"
        android:key="@string/pref_now_playing_key"
        android:summaryOn="@string/pref_enable_now_playing"
        android:summaryOff="@string/pref_now_playing_false"
        android:defaultValue="@string/pref_default_nowplaying">
    </CheckBoxPreference>

    <CheckBoxPreference
        android:title="Favorites!"
        android:key="@string/pref_fav_key"
        android:summaryOn="@string/pref_yes_favs"
        android:summaryOff="@string/pref_no_favs"
        android:defaultValue="@string/pref_default_yes_favs">
    </CheckBoxPreference>

</PreferenceScreen>